--- a/08-Flex-Grow/index.html
+++ b/08-Flex-Grow/index.html
@@ -8,13 +8,13 @@
 
 </head>
 <body>
-    <h1></h1>
+    <h1>🚽Flex Grow</h1>
 
     <div>
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
+        <div class="item item-1">1</div>
+        <div class="item item-2">2</div>
+        <div class="item item-3">3</div>
+        <div class="item item-4">4</div>
     </div>
     
 </body>
