--- a/11-Practica-Flexbox/index.html
+++ b/11-Practica-Flexbox/index.html
@@ -12,7 +12,7 @@
 
 <divc class="container">
 
-    <header>
+    <header>    
         <h1>✍🏻 Practica Flexbox</h1>
         <nav>
             <a href="#">Enlace 1</a>
@@ -26,26 +26,75 @@
         <aside>
             <h2>Categorias</h2>
             <ul>
-                <li>Categorias 1</li>
-                <li>Categorias 2</li>
-                <li>Categorias 3</li>
-                <li>Categorias 4</li>
+                <li>Todas</li>
+                <li>Paisajes</li>
+                <li>Retratos</li>
+                <li>Productos</li>
             </ul>
         </aside>
 
         <section>
-            <div>
-                <img src="https://picsum.photos/200/120" alt="Imagen 1"/>
+            <div class="card">
+                <img src="https://picsum.photos/200/120?7" alt="Imagen 1"/>
                 <h3>Elemento 1</h3>
             </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/200/120?8" alt="Imagen 1"/>
+                <h3>Elemento 2</h3>
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/200/120?9" alt="Imagen 1"/>
+                <h3>Elemento 3</h3>
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/200/120?10" alt="Imagen 1"/>
+                <h3>Elemento 4</h3>
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/200/120?6" alt="Imagen 1"/>
+                <h3>Elemento 5</h3>
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/200/120?5" alt="Imagen 1"/>
+                <h3>Elemento 6</h3>
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/200/120?4" alt="Imagen 1"/>
+                <h3>Elemento 7</h3>
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/200/120?3" alt="Imagen 1"/>
+                <h3>Elemento 8</h3>
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/200/120?2" alt="Imagen 1"/>
+                <h3>Elemento 9</h3>
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/200/120?1" alt="Imagen 1"/>
+                <h3>Elemento 10</h3>
+            </div>
+
         </section>
 
 
     </main>
     <footer>
-        <div>
+
+        <div class="copyright">
             <p>©2025 Practica Flexbox</p>
-            <div>
+        </div>
+
+        <div class="socialmedia">
                 <a href="#" target=" _blank">
                     <i class="bi bi-instagram"></i></a>
 
@@ -53,8 +102,8 @@
                     <i class="bi bi-tiktok"></i></a>
 
                 <a href="#" target=" _blank"><i class="bi bi-youtube"></i></a>
-            </div>
         </div>
+
     </footer> 
 
 
